# sustaain-assessment

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/shared_kernel/: README.md  __init__.py  base_models.py  config.py  database.py  repositories.py
backend/app/traceability/application/: RegisterBatchService.py  RetrieveBatchService.py  ShipBatchService.py
backend/app/traceability/domain/: BatchStatus.py  CacaoBatch.py  CocoaBatch.py  CocoaBatchRepositoryInterface.py  Location.py  Quantity.py  TrackingEntry.py  TransportMode.py
backend/app/traceability/infrastructure/api/: TraceabilityRouter.py
backend/app/traceability/infrastructure/database/: PostgresCocoaBatchRespository.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
